# la_musicca

./: .gitignore  CMakeLists.txt  README.md  la_musicca.cpp  library.cpp  library.h  library_serializer.rb  main.cpp  queue_manager.h
data/: library.yml
include/: album.h  library.h  queue_manager.h
src/: la_musicca.cpp  library.cpp  queue_manager.cpp
